<resources>
    <string name="app_name">RoboCook</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_page_heading">Welcome to RoboCook!</string>
    <string name="welcome_page_description">Register to start being inspired of what to cook!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="recipe_title">Title of The Recipe</string>
    <string name="recipe_ingredients">Ingredients of The Recipe</string>
    <string name="recipe_steps">Steps of The Recipe</string>
    <string name="button_add_recipe">Button add Recipe</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="button_fusion">Button Fusion</string>
    <string name="create_your_recipe">Create your recipe!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="title">Title</string>
    <string name="create_title">Create title</string>
    <string name="ingredients">Ingredients</string>
    <string name="enter_the_ingredients">Enter the ingredients</string>
    <string name="steps">Steps</string>
    <string name="explain_the_steps">Explain the steps</string>
    <string name="photo">Photo</string>
    <string name="photo_recipe">Photo Recipe</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="create_recipe">Create recipe</string>
    <string name="author">Author</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse</string>
    <string name="author_format">Author : %1$s</string>
    <string name="robocook">ROBOCOOK!</string>
    <string name="onboarding_desc_1">Providing you with recipe recommendations that are affordable and easy to make.</string>
    <string name="fusion">Fusion!</string>
    <string name="onboarding_desc_2">Combine two of your favorite foods and get recipe recommendations to help you get more variety in your home cooking.</string>
    <string name="get_started">Get Started!</string>
    <string name="icon_next">Icon Next</string>
    <string name="icon_prev">Icon Prev</string>
    <string name="logo_app">Logo App</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_now_to_continue">Login now to continue</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_an_account">Create an Account!</string>
    <string name="fill_column_below">Please fill the column below</string>
    <string name="create_email">Create email</string>
    <string name="create_password">Create password</string>
    <string name="already_have">Already have an account?</string>
    <string name="image_recipe">Image Recipe</string>
    <string name="image_favorite">Image Favorite</string>
    <string name="combine_two_recipes">Combine two recipes to get new recommendations!</string>
    <string name="favorite">Favorite</string>
    <string name="fusion_result">Fusion Result</string>
    <string name="search">Search</string>
</resources>