<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".razif.ui.add_recipe.AddRecipeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_create_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/create_your_recipe"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/title"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_create_recipe"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loEtTitleRecipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleRecipe"
            app:startIconDrawable="@drawable/ic_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitleRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_title"
                android:fontFamily="@font/montserrat_regular"
                android:ems="10"
                android:inputType="text"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvIngredientsRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/ingredients"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loEtTitleRecipe"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loEtIngredientsRecipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIngredientsRecipe"
            app:startIconDrawable="@drawable/ic_cookie">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etIngredientsRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_ingredients"
                android:fontFamily="@font/montserrat_regular"
                android:ems="10"
                android:inputType="textMultiLine"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvStepsRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/steps"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loEtIngredientsRecipe"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loEtStepsRecipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStepsRecipe"
            app:startIconDrawable="@drawable/ic_post_add">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStepsRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/explain_the_steps"
                android:fontFamily="@font/montserrat_regular"
                android:ems="10"
                android:inputType="textMultiLine"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPictureRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/photo"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loEtStepsRecipe"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_photo"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:cardCornerRadius="20dp"
            android:elevation="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPictureRecipe">

            <ImageView
                android:id="@+id/ivNewRecipePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photo_recipe"
                android:src="@drawable/ic_add_photo" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btCameraInput"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/camera"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_photo" />

        <Button
            android:id="@+id/btGalleryInput"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/gallery"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.872"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_photo" />

        <Button
            android:id="@+id/btCreateNewRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_recipe"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btCameraInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>